--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -543,6 +543,10 @@
     "message": "Anti-Circumvention filters",
     "description": "A filter list"
   },
+  "filternordic": {
+    "message": "Nordic Filters + EasyList",
+    "description": "A filter list combined with EasyList"
+  },
   "blacklistclickmessage": {
     "message": "Right click an ad on a page to block it -- or block it here manually.",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -2773,6 +2777,10 @@
     "message": "Thanks",
     "description": "Message for help flow in popup menu."
   },
+  "got_it_no_period": {
+    "message": "Got it",
+    "description": "Button text on the DC options page."
+  },
   "seeing_distractions": {
     "message": "I'm seeing distractions on this site",
     "description": "Message for help flow in popup menu."
@@ -3063,6 +3071,14 @@
   },
   "check_out_themes": {
     "message": "Check out themes!",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "new_premium_feature": {
+    "message": "New Premium feature available!",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "check_out_dc": {
+    "message": "Block more with Distraction Control",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
@@ -3493,6 +3509,22 @@
     "message": "Say goodbye to newsletter pop-ups, floating videos, and other annoying distractions with Distraction Control.",
     "description": "Description of the distraction control option"
   },
+  "please_note": {
+    "message": "Please note: ",
+    "description": "Description of the distraction control option"
+  },
+  "distraction_control_new": {
+    "message": "Distraction Control is a new feature and is still being refined. ",
+    "description": "Description of the distraction control option"
+  },
+  "your_participation": {
+    "message": "Your participation and feedback will help us continue to improve its reach and functionality. ",
+    "description": "Description of the distraction control option"
+  },
+  "dc_more_information": {
+    "message": "More information can be found [[here]].",
+    "description": "Description of the distraction control option"
+  },
   "distraction_control_example": {
     "message": "Distraction Control example",
     "description": "Text in the alt attribute of an image in the Options page mab that visualizes the Distraction Control feature."
@@ -3506,11 +3538,11 @@
     "description": "Description of 'block site notifications' on the distraction control options page"
   },
   "stop_autoplay_videos": {
-    "message": "Stop Autoplay Videos",
+    "message": "Stop Floating Videos",
     "description": "Sub-header on the distraction control options page"
   },
   "prevent_videos": {
-    "message": "Prevent videos from playing automatically and stop 'floating' videos from following you as you browse.",
+    "message": "Prevent most videos from playing automatically, and stop floating videos from following you as you browse.",
     "description": "Description of 'stop autoplay videos' on the distraction control options page"
   },
   "hide_newsletter_popups": {
