--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.36.0, Date: 2021-09-08
+- Updated the bundled Snippets library
+
 Version: 4.35.0, Date: 2021-08-11
 - Fixed an issue with the advanced mode of the hiding wizard
 - Updated the bundled Snippets library
